--- a/TalentDemo/TalentDemo-Info.plist
+++ b/TalentDemo/TalentDemo-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>xxx.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>globalegrow.SD4iPhone</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
