--- a/TalentDemo/TalentDemo-Info.plist
+++ b/TalentDemo/TalentDemo-Info.plist
@@ -8,8 +8,12 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleGetInfoString</key>
+	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>globalegrow.SD4iPhone</string>
+	<string>com.sammydress.${PRODUCT_NAME:rfc1034identifier}</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
